--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,6 @@ on:
     branches: [main]
     paths: ['.versions']
   workflow_dispatch:
-    inputs:
-      nmap_version:
-        description: 'nmap Version'
-        required: false
 
 env:
   REGISTRY: ghcr.io
@@ -87,7 +83,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            NMAP_VERSION=${{ github.event.inputs.nmap_version || steps.versions.outputs.nmap_version }}
+            NMAP_VERSION=${{ steps.versions.outputs.nmap_version }}
+            GH_VERSION=${{ steps.versions.outputs.gh_version }}
+            DOCKER_VERSION=${{ steps.versions.outputs.docker_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
