Add Rust toolchain (cargo, rustc, clippy, rustfmt)

--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -27,6 +27,7 @@ jobs:
           echo "nmap_version=${NMAP_VERSION}" >> $GITHUB_OUTPUT
           echo "gh_version=${GH_VERSION}" >> $GITHUB_OUTPUT
           echo "docker_version=${DOCKER_VERSION}" >> $GITHUB_OUTPUT
+          echo "rust_version=${RUST_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Check latest nmap version
         id: check-nmap
@@ -52,6 +53,14 @@ jobs:
           echo "latest=${LATEST}" >> $GITHUB_OUTPUT
           echo "Latest Docker: ${LATEST}"
 
+      - name: Check latest Rust version
+        id: check-rust
+        run: |
+          LATEST=$(curl -sL "https://static.rust-lang.org/dist/channel-rust-stable.toml" | \
+            grep -m1 "^version = " | sed 's/version = "//' | sed 's/".*//' | cut -d' ' -f1)
+          echo "latest=${LATEST}" >> $GITHUB_OUTPUT
+          echo "Latest Rust: ${LATEST}"
+
       - name: Compare versions
         id: compare
         run: |
@@ -76,6 +85,12 @@ jobs:
             echo "Docker update available: ${{ steps.current.outputs.docker_version }} -> ${{ steps.check-docker.outputs.latest }}"
           fi
 
+          if [ "${{ steps.current.outputs.rust_version }}" != "${{ steps.check-rust.outputs.latest }}" ] && [ -n "${{ steps.check-rust.outputs.latest }}" ]; then
+            UPDATES="true"
+            CHANGELOG="${CHANGELOG}- **Rust**: ${{ steps.current.outputs.rust_version }} → ${{ steps.check-rust.outputs.latest }}\n"
+            echo "Rust update available: ${{ steps.current.outputs.rust_version }} -> ${{ steps.check-rust.outputs.latest }}"
+          fi
+
           if [ -z "$UPDATES" ]; then
             echo "All dependencies are up to date"
             echo "updates_available=false" >> $GITHUB_OUTPUT
@@ -94,15 +109,18 @@ jobs:
           NEW_NMAP="${{ steps.check-nmap.outputs.latest }}"
           NEW_GH="${{ steps.check-gh.outputs.latest }}"
           NEW_DOCKER="${{ steps.check-docker.outputs.latest }}"
+          NEW_RUST="${{ steps.check-rust.outputs.latest }}"
           [ -z "$NEW_NMAP" ] && NEW_NMAP="${NMAP_VERSION}"
           [ -z "$NEW_GH" ] && NEW_GH="${GH_VERSION}"
           [ -z "$NEW_DOCKER" ] && NEW_DOCKER="${DOCKER_VERSION}"
+          [ -z "$NEW_RUST" ] && NEW_RUST="${RUST_VERSION}"
 
           cat > .versions << EOF
           IMAGE_VERSION=${IMAGE_VERSION}
           NMAP_VERSION=${NEW_NMAP}
           GH_VERSION=${NEW_GH}
           DOCKER_VERSION=${NEW_DOCKER}
+          RUST_VERSION=${NEW_RUST}
           EOF
 
           echo "Updated .versions:"
