--- a/.github/workflows/check-versions.yml
+++ b/.github/workflows/check-versions.yml
@@ -57,7 +57,7 @@ jobs:
         id: check-rust
         run: |
           LATEST=$(curl -sL "https://static.rust-lang.org/dist/channel-rust-stable.toml" | \
-            grep -m1 "^version = " | sed 's/version = "//' | sed 's/".*//' | cut -d' ' -f1)
+            grep -A1 "^\[pkg.rust\]" | grep "^version" | sed 's/version = "//' | sed 's/ .*//')
           echo "latest=${LATEST}" >> $GITHUB_OUTPUT
           echo "Latest Rust: ${LATEST}"
 
