--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
           echo "gh_version=${GH_VERSION}" >> $GITHUB_OUTPUT
           echo "docker_version=${DOCKER_VERSION}" >> $GITHUB_OUTPUT
           echo "rust_version=${RUST_VERSION}" >> $GITHUB_OUTPUT
+          echo "zig_version=${ZIG_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Check if IMAGE_VERSION changed
         id: check-version
@@ -88,6 +89,7 @@ jobs:
             GH_VERSION=${{ steps.versions.outputs.gh_version }}
             DOCKER_VERSION=${{ steps.versions.outputs.docker_version }}
             RUST_VERSION=${{ steps.versions.outputs.rust_version }}
+            ZIG_VERSION=${{ steps.versions.outputs.zig_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
